security: fixed warnings by CodeQL (#599)
* chore: fixed semicolon insertion error.

* chore: fixed unused imports error.

* chore(ui): updated career histories.

* chore: fixed log injection error with removing lines.

* chore: removed Rapid API related since it was not used any more.

* fix(api): updated endpoint for health checking with Cloud Run.

* chore: removed completed TODO from codes.

* chore: updated swagger docs description.

* chore: updated swagger docs.
