# api-server/routes/index.js
@@ -12,10 +12,10 @@ router.get('/', function(req, res) {
 });
 
 
-router.get('/healthz', function(req, res) {
+router.get('/health', function(req, res) {
   // #swagger.tags = ['General']
   // #swagger.summary = 'Endpoint of probe target'
-  // #swagger.description = '/healthz'
+  // #swagger.description = '/health'
   res.status(200).json({
     "status": "ok"
   });
