# schemas/swagger.json
@@ -48,13 +48,13 @@
         }
       }
     },
-    "/healthz": {
+    "/health": {
       "get": {
         "tags": [
           "General"
         ],
         "summary": "Endpoint of probe target",
-        "description": "/healthz",
+        "description": "/health",
         "responses": {
           "200": {
             "description": "OK"
@@ -111,20 +111,6 @@
         ],
         "summary": "/api/v1/cv",
         "description": "returns static contents about career summaries",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/cv/certifications": {
-      "get": {
-        "tags": [
-          "CV"
-        ],
-        "summary": "/api/v1/cv/certifications",
-        "description": "returns list of certifications with static contents",
         "responses": {
           "200": {
             "description": "OK"
